2005-08-15  Tim Jenness  <tjenness@cpan.org>

	* Makefile.PL: No longer need fortran libraries in link

2005-03-30  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm (adam_process_message): Fix problem whereby the obey
	returned with a string status of FACERR__NOFAC if the error number
	was not defined. Given that the code calling this was always
	assuming it got an integer status back (which it did whenever it
	could be translated) we now enforce that behaviour even if
	FACERR_NOFAC.

2003-07-19  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm (adam_process_message): Fix | precedence error and bump
	version to 1.13

2000-07-12  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm: Increment version number to 1.12 to match next starlink
	release.

2000-05-19  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm (adam_receive): MSG_NAME_LEN and MSG_VAL_LEN are no
	longer arguments since the XS part knows this.

	* ADAM.xs: Use MSG_NAME_LEN and MSG_VAL_LEN to determine string sizes.

1999-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm: Tidy up POD

	* Makefile.PL: Use Starlink::Config

1998-10-14  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.xs: Tidy up autoload so that it uses int rather than double 
	and remove second argument.

1998-07-04  Tim Jenness  <timj@jach.hawaii.edu>

	* ADAM.pm (AUTOLOAD): Change so that @_ is not used! (Constants do 
	not require args)
